--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Rutikesh</h1>
+    <h1>Shivam</h1>
+    <h1>Shashikant</h1>
+    <h1>Prathamesh</h1>
+    <h1>Ninad</h1>
 </body>
 </html>
